style: fix hero-image overflow

--- a/assets/css/_hero.scss
+++ b/assets/css/_hero.scss
@@ -1,21 +1,21 @@
 #hero {
+
   .hero-image {
+    width: calc(100% + 2rem + (100vw - 100%));
     margin-left: -1rem;
-    margin-right: -1rem;
-    width:calc(100% + 4rem);
+
     height: 300px;
-    object-position: 70%;
     object-fit: cover;
+    object-position: 70% 50%;
+    display: block;
+    padding: 0;
 
     @media screen and (min-width: 600px) {
-      width:100%;
+      width: 100%;
       margin-left: 0;
-      margin-right: 0;
-      height: auto;
-
       border-radius: var(--card-border-radius);
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-
+      height: auto;
     }
   }
 
